--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
 	<meta charset="UTF-8">
 	<title>This is the page title eyooo</title>
-	<<style>
-	body{
-		background-color: red;
-	}
+	<style>
+		body{
+			background-color: red;
+		}
 	</style>
 </head>
 <body>
 	<h1>Doris' Second Assignment</h1>
 	<p>I hope this works.</p>
-	</body>
-	</html> 
+</body>
+</html> 
